kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tg-subscription
  namespace: tg-subscription
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tg-subscription
  template:
    metadata:
      labels:
        app: tg-subscription
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: tg-subscription
        image: ghcr.io/richardokonicha/tg-subscription:latest
        # image: reechee/tg-subscription:latest
        imagePullPolicy: IfNotPresent # Never  # or IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 5001
          name: tg-port
