kubernetes/kube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tg-subscription
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tg-subscription
  template:
    metadata:
      labels:
        app: tg-subscription
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: tg-subscription
        image: ghcr.io/richardokonicha/tg-subscription:latest
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 5001
          name: tg-port
---
apiVersion: v1
kind: Service
metadata:
  name: tg-subscription
spec:
  type: LoadBalancer
  selector:
    app: tg-subscription
  ports:
    - name: name-of-service-port
      protocol: TCP
      port: 80
      targetPort: tg-port
