kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tg-subscription  
  namespace: tg-subscription
spec:
  # type: LoadBalancer
  type: ClusterIP
  selector:
    app: tg-subscription
  ports:
  - name: tg-service-port
    protocol: TCP
    port: 80
    targetPort: tg-port
---
